--- a/agrobiznis.html
+++ b/agrobiznis.html
@@ -27,10 +27,11 @@
     <main>
       <div class="intro-wrapper-agro">
         <div class="banner-div-agro">
-          <img src="photos/agro2.jpg" alt="rural-area" />
+          <img src="photos/agro22.jpg" alt="rural-area" />
           <div class="overlay-agro"></div>
           <div class="text-on-image-agro roboto-light">
-            Lorem ipsum dolor sit amet
+            S vama na svakom koraku
+            <div class="subtext-agro">prema snažnijoj budućnosti</div>
           </div>
         </div>
       </div>
