--- a/header.html
+++ b/header.html
@@ -9,7 +9,20 @@
       <a href="o-nama.html"><h3 class="roboto-medium">O NAMA</h3></a>
 
       <div class="dropdown">
-        <a href="usluge.html"><h3 class="roboto-medium">USLUGE</h3></a>
+        <a href="usluge.html">
+          <h3 class="roboto-medium">
+            USLUGE
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+              fill="#e8eaed"
+            >
+              <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
+            </svg>
+          </h3>
+        </a>
         <div class="dropdown-content">
           <a href="usluge.html">Financijsko savjetovanje</a>
           <a href="usluge.html">Strateško savjetovanje</a>
