--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               </div>
             </a>
 
-            <a href="#" class="service-card-link">
+            <a href="agrobiznis.html" class="service-card-link">
               <div class="service-card">
                 <div class="service-header">
                   <div class="service-image-container">
