--- a/agrobiznis.html
+++ b/agrobiznis.html
@@ -35,6 +35,228 @@
           </div>
         </div>
       </div>
+
+      <div class="agrobiznis-wrapper">
+        <div class="content-wrapper">
+          <div class="agrobiznis-content">
+            <h2 class="agrobiznis-title roboto-light">
+              Agrobiznis i Održivi Razvoj
+            </h2>
+            <p class="agrobiznis-text roboto-light">
+              Razumijemo da je agrobiznis jedan od ključnih sektora za održivi
+              gospodarski rast i stabilnost, kako u lokalnim zajednicama, tako i
+              u globalnom gospodarstvu. Sektor poljoprivrede i prehrambene
+              industrije suočava se s jedinstvenim izazovima poput oscilacija
+              cijena, klimatskih promjena te sve većih zahtjeva za održivom
+              proizvodnjom. Istovremeno, njegov značaj za osiguranje prehrambene
+              sigurnosti i očuvanje ruralnih zajednica čini ga nezaobilaznim
+              stubom svake ekonomije.
+            </p>
+          </div>
+          <div class="agrobiznis-image-container">
+            <img
+              src="photos/barley.jpg"
+              alt="Fotografija ječma"
+              class="agrobiznis-image"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="services-section-wrapper">
+        <div class="services-section-agro">
+          <h2 class="services-title-agro roboto-light">Kako možemo pomoći?</h2>
+          <div class="services-container">
+            <div class="service-card-agro">
+              <img
+                src="photos/it-services.png"
+                alt="Digitalizacija u poljoprivredi"
+                class="service-icon"
+              />
+              <h3 class="service-title-agro roboto-light">
+                Digitalizacija u poljoprivredi
+              </h3>
+              <p class="service-description-agro roboto-light">
+                Digitalna transformacija poljoprivredne proizvodnje može vam
+                pomoći povećati efikasnost, smanjiti troškove i optimizirati
+                upotrebu resursa. Nudimo vam podršku u implementaciji novih
+                tehnologija, poput dronova, senzora i softverskih rješenja, kako
+                biste unaprijedili produktivnost i osigurali konkurentnost.
+              </p>
+            </div>
+
+            <div class="service-card-agro">
+              <img
+                src="photos/presentation.png"
+                alt="Investicijske studije i poslovni planovi"
+                class="service-icon"
+              />
+              <h3 class="service-title-agro roboto-light">
+                Izrada investicijskih studija i poslovnih planova
+              </h3>
+              <p class="service-description-agro roboto-light">
+                Pomažemo vam kreirati čvrste temelje za buduće investicije. Bez
+                obzira na veličinu vašeg projekta, detaljno analiziramo sve
+                aspekte ulaganja, od tržišnih prilika do procjene rizika, kako
+                biste donijeli informirane odluke koje će osigurati rast vašeg
+                poslovanja.
+              </p>
+            </div>
+
+            <div class="service-card-agro">
+              <img
+                src="photos/marketing-automation.png"
+                alt="Marketing strategije"
+                class="service-icon"
+              />
+              <h3 class="service-title-agro roboto-light">
+                Razvoj marketing strategija za agrobiznis proizvode
+              </h3>
+              <p class="service-description-agro roboto-light">
+                U konkurentnom tržištu poljoprivrednih i prehrambenih proizvoda,
+                snažna marketinška strategija može biti ključna za uspjeh. Naš
+                tim vam pomaže u izradi marketinških planova koji uključuju
+                brendiranje, pakiranje, promociju i plasman vaših proizvoda.
+              </p>
+            </div>
+
+            <div class="service-card-agro">
+              <img
+                src="photos/map.png"
+                alt="Agro-turizam"
+                class="service-icon"
+              />
+              <h3 class="service-title-agro roboto-light">
+                Savjetovanje za agro-turizam i diversifikaciju prihoda
+              </h3>
+              <p class="service-description-agro roboto-light">
+                Ako razmišljate o proširenju poslovanja kroz agro-turizam ili
+                druge oblike dopunskih aktivnosti, mi smo ovdje da vam pomognemo
+                u razvoju održivih poslovnih modela. Savjetujemo vas o
+                mogućnostima plasiranja proizvoda direktno potrošačima ili
+                razvoju turističkih sadržaja na vašim imanjima.
+              </p>
+            </div>
+
+            <div class="service-card-agro">
+              <img
+                src="photos/online-shop.png"
+                alt="Proširenje poslovanja"
+                class="service-icon"
+              />
+              <h3 class="service-title-agro roboto-light">
+                Podrška u proširenju poslovanja i izlazak na nova tržišta
+              </h3>
+              <p class="service-description-agro roboto-light">
+                Vaša tvrtka je spremna za širenje, ali potrebna vam je stručna
+                podrška? Razvijamo strategije širenja poslovanja koje uključuju
+                analizu potencijalnih tržišta, razradu marketinških planova i
+                savjete za optimizaciju poslovanja.
+              </p>
+            </div>
+
+            <div class="service-card-agro">
+              <img
+                src="photos/profits.png"
+                alt="Financiranje i subvencije"
+                class="service-icon"
+              />
+              <h3 class="service-title-agro roboto-light">
+                Savjetovanje u vezi s financiranjem i subvencijama iz
+                nacionalnih izvora i EU fondova
+              </h3>
+              <p class="service-description-agro roboto-light">
+                Iskoristite priliku koju nude nacionalni izvori i fondovi
+                Europske unije za financiranje vaših projekata. Imamo bogato
+                iskustvo u pisanju projekata i pripremi dokumentacije za EU
+                natječaje. Pratimo vas kroz cijeli proces, od početnog koncepta
+                do konačne prijave.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="development-strategy-section roboto-light">
+        <h2 class="development-strategy-title roboto-light">
+          Izrada razvojnih strategija za LAG-ove, gradove i općine
+        </h2>
+        <p class="development-strategy-text roboto-light">
+          Razvoj ruralnih područja zahtijeva promišljeno planiranje i jasnu
+          viziju budućnosti. Naš tim surađuje s lokalnim akcijskim grupama
+          (LAG-ovima), gradovima i općinama na izradi sveobuhvatnih razvojnih
+          strategija koje potiču održivi razvoj i poboljšanje kvalitete života u
+          ruralnim zajednicama.
+        </p>
+        <div class="development-strategy-container">
+          <div class="development-card">
+            <img
+              src="photos/around-the-world.png"
+              alt="LAG Strategija"
+              class="development-icon"
+            />
+            <h3 class="development-card-title roboto-light">
+              Izrada razvojnih strategija za LAG-ove
+            </h3>
+            <p class="development-description roboto-light">
+              LAG-ovi igraju ključnu ulogu u povezivanju ruralnih zajednica i
+              osiguravanju pristupa fondovima i potporama. U suradnji s lokalnim
+              dionicima izrađujemo dugoročne strategije koje potiču gospodarski
+              rast, socijalnu koheziju i očuvanje prirodnih resursa.
+            </p>
+          </div>
+          <div class="development-card">
+            <img
+              src="photos/town-hall.png"
+              alt="Gradska strategija"
+              class="development-icon"
+            />
+            <h3 class="development-card-title roboto-light">
+              Razvojne strategije za gradove i općine
+            </h3>
+            <p class="development-description roboto-light">
+              Pomažemo lokalnim vlastima u izradi strateških dokumenata koji
+              postavljaju temelj za dugoročan ekonomski i društveni napredak.
+              Naše strategije uključuju analize i planove usmjerene na razvoj
+              infrastrukture, poboljšanje usluga i jačanje lokalnog
+              gospodarstva.
+            </p>
+          </div>
+          <div class="development-card">
+            <img
+              src="photos/solar-panel.png"
+              alt="Ekološka strategija"
+              class="development-icon"
+            />
+            <h3 class="development-card-title roboto-light">
+              Podrška u razvijanju ekoloških i održivih zajednica
+            </h3>
+            <p class="development-description roboto-light">
+              Ruralne zajednice imaju ogroman potencijal za razvoj održivih
+              praksi i ekoloških naselja. Naša kompanija nudi podršku u razvoju
+              strategija za ekološku infrastrukturu, obnovljive izvore energije
+              i druge aspekte održivosti.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="call-to-action-wrapper">
+        <div class="call-to-action-section">
+          <p class="cta-text roboto-light">
+            Naša kompanija pruža stručne savjetodavne usluge s ciljem da
+            osnažimo poljoprivrednike, prehrambenu industriju i sve one koji
+            žele unaprijediti ili proširiti svoje poslovanje u agrobiznisu.
+            Razumijemo specifične potrebe i izazove ovog sektora, kao i njegov
+            potencijal da kreira dodanu vrijednost, inovacije i zapošljavanje u
+            ruralnim područjima.
+          </p>
+          <div class="button-container-agro">
+            <a href="kontakt.html" class="contact-button-agro roboto-medium"
+              >Kontaktirajte nas</a
+            >
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer></footer>
