--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
         <h1 class="roboto-light">Štriga poslovno savjetovanje</h1>
       </a>
     </div>
-    <nav class="page-navigation">
+    <nav class="page-navigation" id="page-navigation">
       <a href="o-nama.html"><h3 class="roboto-medium">O NAMA</h3></a>
 
       <div class="dropdown">
