--- a/agrobiznis.html
+++ b/agrobiznis.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="indexCSS/html.css" />
     <link rel="stylesheet" href="indexCSS/services.css" />
     <link rel="stylesheet" href="subPage.css/agrobiznis.css" />
+    <link rel="stylesheet" href="indexCSS/contact-us-section.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,7 +26,7 @@
     <header></header>
 
     <main>
-      <div class="intro-wrapper-agro">
+      <!-- <div class="intro-wrapper-agro">
         <div class="banner-div-agro">
           <img src="photos/agro22.jpg" alt="rural-area" />
           <div class="overlay-agro"></div>
@@ -34,7 +35,7 @@
             <div class="subtext-agro">prema snažnijoj budućnosti</div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="agrobiznis-wrapper">
         <div class="content-wrapper">
@@ -55,7 +56,7 @@
           </div>
           <div class="agrobiznis-image-container">
             <img
-              src="photos/barley.jpg"
+              src="photos/vineyard.jpg"
               alt="Fotografija ječma"
               class="agrobiznis-image"
             />
@@ -63,72 +64,61 @@
         </div>
       </div>
       <div class="services-section-wrapper">
-        <div class="services-section-agro">
-          <h2 class="services-title-agro roboto-light">Kako možemo pomoći?</h2>
+        <div class="services-section-service-page">
+          <h2 class="services-title-main roboto-light">Kako možemo pomoći?</h2>
           <div class="services-container">
-            <div class="service-card-agro">
-              <img
-                src="photos/it-services.png"
-                alt="Digitalizacija u poljoprivredi"
-                class="service-icon"
-              />
-              <h3 class="service-title-agro roboto-light">
-                Digitalizacija u poljoprivredi
-              </h3>
-              <p class="service-description-agro roboto-light">
-                Digitalna transformacija poljoprivredne proizvodnje može vam
-                pomoći povećati efikasnost, smanjiti troškove i optimizirati
-                upotrebu resursa. Nudimo vam podršku u implementaciji novih
-                tehnologija, poput dronova, senzora i softverskih rješenja, kako
-                biste unaprijedili produktivnost i osigurali konkurentnost.
+            <div class="service-card-service-page">
+              <div class="service-header-service-page">
+                <img
+                  src="photos/agro-icons/profits.png"
+                  alt="Financiranje i subvencije"
+                  class="service-icon"
+                />
+                <h3 class="service-title-service-page roboto-light">
+                  Savjetovanje u vezi s financiranjem iz nacionalnih izvora i EU
+                  fondova
+                </h3>
+              </div>
+              <p class="service-description-service-page roboto-light">
+                Iskoristite priliku koju nude nacionalni izvori i fondovi
+                Europske unije za financiranje vaših projekata. Imamo bogato
+                iskustvo u pisanju projekata i pripremi dokumentacije za EU
+                natječaje. Pratimo vas kroz cijeli proces, od početnog koncepta
+                do konačne prijave.
               </p>
             </div>
 
-            <div class="service-card-agro">
-              <img
-                src="photos/presentation.png"
-                alt="Investicijske studije i poslovni planovi"
-                class="service-icon"
-              />
-              <h3 class="service-title-agro roboto-light">
-                Izrada investicijskih studija i poslovnih planova
-              </h3>
-              <p class="service-description-agro roboto-light">
-                Pomažemo vam kreirati čvrste temelje za buduće investicije. Bez
-                obzira na veličinu vašeg projekta, detaljno analiziramo sve
-                aspekte ulaganja, od tržišnih prilika do procjene rizika, kako
-                biste donijeli informirane odluke koje će osigurati rast vašeg
-                poslovanja.
+            <div class="service-card-service-page">
+              <div class="service-header-service-page">
+                <img
+                  src="photos/agro-icons/online-shop.png"
+                  alt="Proširenje poslovanja"
+                  class="service-icon"
+                />
+                <h3 class="service-title-service-page roboto-light">
+                  Podrška u proširenju poslovanja i izlazak na nova tržišta
+                </h3>
+              </div>
+              <p class="service-description-service-page roboto-light">
+                Vaša tvrtka je spremna za širenje, ali potrebna vam je stručna
+                podrška? Razvijamo strategije širenja poslovanja koje uključuju
+                analizu potencijalnih tržišta, razradu marketinških planova i
+                savjete za optimizaciju poslovanja.
               </p>
             </div>
 
-            <div class="service-card-agro">
-              <img
-                src="photos/marketing-automation.png"
-                alt="Marketing strategije"
-                class="service-icon"
-              />
-              <h3 class="service-title-agro roboto-light">
-                Razvoj marketing strategija za agrobiznis proizvode
-              </h3>
-              <p class="service-description-agro roboto-light">
-                U konkurentnom tržištu poljoprivrednih i prehrambenih proizvoda,
-                snažna marketinška strategija može biti ključna za uspjeh. Naš
-                tim vam pomaže u izradi marketinških planova koji uključuju
-                brendiranje, pakiranje, promociju i plasman vaših proizvoda.
-              </p>
-            </div>
-
-            <div class="service-card-agro">
-              <img
-                src="photos/map.png"
-                alt="Agro-turizam"
-                class="service-icon"
-              />
-              <h3 class="service-title-agro roboto-light">
-                Savjetovanje za agro-turizam i diversifikaciju prihoda
-              </h3>
-              <p class="service-description-agro roboto-light">
+            <div class="service-card-service-page">
+              <div class="service-header-service-page">
+                <img
+                  src="photos/agro-icons/map.png"
+                  alt="Agro-turizam"
+                  class="service-icon"
+                />
+                <h3 class="service-title-service-page roboto-light">
+                  Savjetovanje za agro-turizam i diversifikaciju prihoda
+                </h3>
+              </div>
+              <p class="service-description-service-page roboto-light">
                 Ako razmišljate o proširenju poslovanja kroz agro-turizam ili
                 druge oblike dopunskih aktivnosti, mi smo ovdje da vam pomognemo
                 u razvoju održivih poslovnih modela. Savjetujemo vas o
@@ -137,39 +127,62 @@
               </p>
             </div>
 
-            <div class="service-card-agro">
-              <img
-                src="photos/online-shop.png"
-                alt="Proširenje poslovanja"
-                class="service-icon"
-              />
-              <h3 class="service-title-agro roboto-light">
-                Podrška u proširenju poslovanja i izlazak na nova tržišta
-              </h3>
-              <p class="service-description-agro roboto-light">
-                Vaša tvrtka je spremna za širenje, ali potrebna vam je stručna
-                podrška? Razvijamo strategije širenja poslovanja koje uključuju
-                analizu potencijalnih tržišta, razradu marketinških planova i
-                savjete za optimizaciju poslovanja.
+            <div class="service-card-service-page">
+              <div class="service-header-service-page">
+                <img
+                  src="photos/agro-icons/marketing-automation.png"
+                  alt="Marketing strategije"
+                  class="service-icon"
+                />
+                <h3 class="service-title-service-page roboto-light">
+                  Razvoj marketing strategija za agrobiznis proizvode
+                </h3>
+              </div>
+              <p class="service-description-service-page roboto-light">
+                U konkurentnom tržištu poljoprivrednih i prehrambenih proizvoda,
+                snažna marketinška strategija može biti ključna za uspjeh. Naš
+                tim vam pomaže u izradi marketinških planova koji uključuju
+                brendiranje, pakiranje, promociju i plasman vaših proizvoda.
               </p>
             </div>
 
-            <div class="service-card-agro">
-              <img
-                src="photos/profits.png"
-                alt="Financiranje i subvencije"
-                class="service-icon"
-              />
-              <h3 class="service-title-agro roboto-light">
-                Savjetovanje u vezi s financiranjem i subvencijama iz
-                nacionalnih izvora i EU fondova
-              </h3>
-              <p class="service-description-agro roboto-light">
-                Iskoristite priliku koju nude nacionalni izvori i fondovi
-                Europske unije za financiranje vaših projekata. Imamo bogato
-                iskustvo u pisanju projekata i pripremi dokumentacije za EU
-                natječaje. Pratimo vas kroz cijeli proces, od početnog koncepta
-                do konačne prijave.
+            <div class="service-card-service-page">
+              <div class="service-header-service-page">
+                <img
+                  src="photos/agro-icons/presentation.png"
+                  alt="Investicijske studije i poslovni planovi"
+                  class="service-icon"
+                />
+                <h3 class="service-title-service-page roboto-light">
+                  Izrada investicijskih studija i poslovnih planova
+                </h3>
+              </div>
+              <p class="service-description-service-page roboto-light">
+                Pomažemo vam kreirati čvrste temelje za buduće investicije. Bez
+                obzira na veličinu vašeg projekta, detaljno analiziramo sve
+                aspekte ulaganja, od tržišnih prilika do procjene rizika, kako
+                biste donijeli informirane odluke koje će osigurati rast vašeg
+                poslovanja.
+              </p>
+            </div>
+
+            <div class="service-card-service-page">
+              <div class="service-header-service-page">
+                <img
+                  src="photos/agro-icons/it-services.png"
+                  alt="Digitalizacija u poljoprivredi"
+                  class="service-icon"
+                />
+                <h3 class="service-title-service-page roboto-light">
+                  Digitalizacija u poljoprivrednoj proizvodnji
+                </h3>
+              </div>
+              <p class="service-description-service-page roboto-light">
+                Digitalna transformacija poljoprivredne proizvodnje može vam
+                pomoći povećati efikasnost, smanjiti troškove i optimizirati
+                upotrebu resursa. Nudimo vam podršku u implementaciji novih
+                tehnologija, poput dronova, senzora i softverskih rješenja, kako
+                biste unaprijedili produktivnost i osigurali konkurentnost.
               </p>
             </div>
           </div>
@@ -190,7 +203,7 @@
         <div class="development-strategy-container">
           <div class="development-card">
             <img
-              src="photos/around-the-world.png"
+              src="photos/agro-icons/around-the-world.png"
               alt="LAG Strategija"
               class="development-icon"
             />
@@ -206,7 +219,7 @@
           </div>
           <div class="development-card">
             <img
-              src="photos/town-hall.png"
+              src="photos/agro-icons/town-hall.png"
               alt="Gradska strategija"
               class="development-icon"
             />
@@ -223,7 +236,7 @@
           </div>
           <div class="development-card">
             <img
-              src="photos/solar-panel.png"
+              src="photos/agro-icons/solar-panel.png"
               alt="Ekološka strategija"
               class="development-icon"
             />
@@ -240,9 +253,9 @@
         </div>
       </div>
 
-      <div class="call-to-action-wrapper">
-        <div class="call-to-action-section">
-          <p class="cta-text roboto-light">
+      <section class="contact-us-section">
+        <div class="contact-us-content">
+          <p class="contact-us-text roboto-light">
             Naša kompanija pruža stručne savjetodavne usluge s ciljem da
             osnažimo poljoprivrednike, prehrambenu industriju i sve one koji
             žele unaprijediti ili proširiti svoje poslovanje u agrobiznisu.
@@ -250,13 +263,13 @@
             potencijal da kreira dodanu vrijednost, inovacije i zapošljavanje u
             ruralnim područjima.
           </p>
-          <div class="button-container-agro">
-            <a href="kontakt.html" class="contact-button-agro roboto-medium"
-              >Kontaktirajte nas</a
+          <div class="button-container">
+            <a href="kontakt.html" class="contact-button roboto-medium"
+              >Kontaktirajte me</a
             >
           </div>
         </div>
-      </div>
+      </section>
     </main>
 
     <footer></footer>
