--- a/footer.html
+++ b/footer.html
@@ -7,8 +7,8 @@
         >
       </div>
       <nav class="page-navigation-footer">
-        <a href="o-nama.html" class="roboto-medium">O NAMA</a>
-        <a href="projekti.html" class="roboto-medium">PROJEKTI</a>
+        <a href="o-nama.html" class="roboto-medium">O MENI</a>
+        <a href="projekti.html" class="roboto-medium">USLUGE</a>
         <a href="blog.html" class="roboto-medium">BLOG</a>
         <a href="kontakt.html" class="roboto-medium">KONTAKT</a>
         <a
