--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <nav class="page-navigation" id="page-navigation">
-      <a href="o-nama.html"><h3 class="roboto-medium">O NAMA</h3></a>
+      <a href="about-us.html"><h3 class="roboto-medium">O MENI</h3></a>
 
       <div class="dropdown">
         <a href="usluge.html">
@@ -24,10 +24,16 @@
           </h3>
         </a>
         <div class="dropdown-content">
-          <a href="usluge.html">Financijsko savjetovanje</a>
-          <a href="usluge.html">Strateško savjetovanje</a>
-          <a href="usluge.html">Održivo poslovanje i ekološka učinkovitost</a>
-          <a href="agrobiznis.html">Agrobiznis i ruralni razvoj</a>
+          <a class="roboto-light" href="financijsko.html"
+            >Financijsko savjetovanje</a
+          >
+          <a class="roboto-light" href="stratesko.html"
+            >Strateško savjetovanje</a
+          >
+
+          <a class="roboto-light" href="agrobiznis.html"
+            >Agrobiznis i ruralni razvoj</a
+          >
         </div>
       </div>
 
