--- a/blog-archive.html
+++ b/blog-archive.html
@@ -27,15 +27,15 @@
 
     <main>
       <div class="blog-header">
-        <h1 class="blog-section-title roboto-light">
+        <h2 class="blog-section-title roboto-light">
           Sve o svemu na jednome mjestu
-        </h1>
+        </h2>
       </div>
       <div class="custom-container">
         <div class="custom-container" id="card-container"></div>
       </div>
       <div id="card-container"></div>
-      <div class="pagination"></div>
+      <div id="pagination-container" class="pagination-container"></div>
     </main>
 
     <footer></footer>
