--- a/about-us.html
+++ b/about-us.html
@@ -92,8 +92,8 @@
                     />
                   </svg>
             <div class="textbox">
-              <h2 class="roboto-light">Dubinska analiza</h2>
-              <p class="roboto-light">Svaki projekt započinjem temeljitim razumijevanjem vašeg poslovanja, tržišta i konkurencije kako bih prepoznala prilike i izazove.</p>
+              <h2 id="right-align" class="roboto-light">Dubinska analiza</h2>
+              <p id="right-align" class="roboto-light">Svaki projekt započinjem temeljitim razumijevanjem vašeg poslovanja, tržišta i konkurencije kako bih prepoznala prilike i izazove.</p>
             </div>
           </div>
 
@@ -134,8 +134,8 @@
               />
             </svg>
             <div class="textbox">
-              <h2 class="roboto-light">Operativna implementacija</h2>
-              <p class="roboto-light">Osiguravam da se strategije provode s preciznošću, uz optimizaciju procesa i upravljanje ključnim promjenama.</p>
+              <h2 id="right-align"  class="roboto-light">Operativna implementacija</h2>
+              <p id="right-align"  class="roboto-light">Osiguravam da se strategije provode s preciznošću, uz optimizaciju procesa i upravljanje ključnim promjenama.</p>
             </div>
           </div>
 
