--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   </h3>
                 </div>
                 <p class="service-description">
-                  Investicijske studije, financijsko modeliranje, izdanje
+                  Investicijske studije, financijsko modeliranje izdanje
                   obveznica, upravljanje rizicima.
                 </p>
               </div>
