--- a/dashboard.html
+++ b/dashboard.html
@@ -38,7 +38,7 @@
     <main>
       <section class="dashboard-wrapper">
         <!-- Dashboard Form -->
-        <div class="dashboard-form-wrapper">
+        <div class="dashboard-form-wrapper" id="dashboard-content">
           <form id="blog-post-form" class="dashboard-form">
             <h2 class="dashboard-title roboto-light">Novi blog</h2>
             <p class="dashboard-subtitle roboto-light">
@@ -154,8 +154,9 @@
           <p id="error-message" class="error-message"></p>
         </div>
       </div>
-
-      <button id="logout-button">Logout</button>
+      <div class="button">
+        <button id="logout-button">Logout</button>
+      </div>
     </main>
 
     <footer></footer>
