Update phone version

--- a/index.html
+++ b/index.html
@@ -40,12 +40,17 @@
 
       <section class="services-section">
         <div class="services-inner-container">
-          <div class="services-description roboto-light">
-            <h3 class="roboto-light">
-              Pomažemo malim i srednjim poduzećima da ostvare svoje ciljeve kroz
-              strateško savjetovanje i inovativna rješenja, te im pružamo
-              podršku i resurse za kontinuirani rast i inovacije.
-            </h3>
+          <div class="services-header-wrapper">
+            <div class="services-header-title">
+              <h2 class="roboto-light">Usluge poslovnog savjetovanja</h2>
+            </div>
+            <div class="services-description">
+              <p class="roboto-light">
+                Pomažemo malim i srednjim poduzećima da ostvare svoje ciljeve
+                kroz strateško savjetovanje i inovativna rješenja, te im pružamo
+                podršku i resurse za kontinuirani rast i inovacije.
+              </p>
+            </div>
           </div>
           <div class="services-cards-container">
             <!-- Service Cards -->
