--- a/agrobiznis.html
+++ b/agrobiznis.html
@@ -26,17 +26,6 @@
     <header></header>
 
     <main>
-      <!-- <div class="intro-wrapper-agro">
-        <div class="banner-div-agro">
-          <img src="photos/agro22.jpg" alt="rural-area" />
-          <div class="overlay-agro"></div>
-          <div class="text-on-image-agro roboto-light">
-            S vama na svakom koraku
-            <div class="subtext-agro">prema snažnijoj budućnosti</div>
-          </div>
-        </div>
-      </div> -->
-
       <div class="agrobiznis-wrapper">
         <div class="content-wrapper">
           <div class="agrobiznis-content">
@@ -59,6 +48,7 @@
               src="photos/vineyard.jpg"
               alt="Fotografija ječma"
               class="agrobiznis-image"
+              id="reverse"
             />
           </div>
         </div>
