--- a/financijsko.html
+++ b/financijsko.html
@@ -27,11 +27,13 @@
     <header></header>
 
     <main>
-      <div class="services-wrapper">
+      <div class="agrobiznis-wrapper">
         <div class="content-wrapper">
-          <div class="services-content">
-            <h2 class="services-title roboto-light">Financijsko planiranje</h2>
-            <p class="services-text roboto-light">
+          <div class="agrobiznis-content">
+            <h2 class="agrobiznis-title roboto-light">
+              Financijsko planiranje
+            </h2>
+            <p class="agrobiznis-text roboto-light">
               Razumijemo da su financijsko i strateško planiranje temelji
               uspješnog poslovanja u današnjem dinamičnom i konkurentnom
               okruženju. Tvrtke se suočavaju s izazovima poput brzih tehnoloških
@@ -43,12 +45,8 @@
               izgradite strategije koje donose mjerljive rezultate.
             </p>
           </div>
-          <div class="services-image-container">
-            <img
-              src="photos/financijsko.jpg"
-              alt="Fotografija ječma"
-              class="services-image"
-            />
+          <div class="agrobiznis-image-container">
+            <img src="photos/financijsko.jpg" class="agrobiznis-image" />
           </div>
         </div>
       </div>
