--- a/header.html
+++ b/header.html
@@ -32,7 +32,7 @@
           >
 
           <a class="roboto-light" href="agrobiznis.html"
-            >Agrobiznis i ruralni razvoj</a
+            >Agrobiznis i održivi razvoj</a
           >
         </div>
       </div>
