--- a/stratesko.html
+++ b/stratesko.html
@@ -27,19 +27,19 @@
     <header></header>
 
     <main>
-      <div class="services-wrapper">
+      <div class="agrobiznis-wrapper">
         <div class="content-wrapper">
-          <div class="services-image-container">
+          <div class="agrobiznis-image-container">
             <img
               src="photos/stratesko.jpg"
               alt="Fotografija industrije"
-              class="services-image"
+              class="agrobiznis-image"
               id="reverse"
             />
           </div>
-          <div class="services-content">
-            <h2 class="services-title roboto-light">Strateško planiranje</h2>
-            <p class="services-text roboto-light">
+          <div class="agrobiznis-content">
+            <h2 class="agrobiznis-title roboto-light">Strateško planiranje</h2>
+            <p class="agrobiznis-text roboto-light">
               Razumijemo da su financijsko i strateško planiranje temelji
               uspješnog poslovanja u današnjem dinamičnom i konkurentnom
               okruženju. Tvrtke se suočavaju s izazovima poput brzih tehnoloških
