--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="indexCSS/intro.css" />
     <link rel="stylesheet" href="indexCSS/profile-banner.css" />
     <link rel="stylesheet" href="indexCSS/html.css" />
-    <link rel="stylesheet" href="indexCSS/services.css" />
+    <link rel="stylesheet" href="indexCSS/services-section.css" />
     <link rel="stylesheet" href="indexCSS/contact-us-section.css" />
     <link rel="stylesheet" href="subPage.css/blog-archive.css" />
 
